Fix resume button transitions on safari

--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ nav {
 	padding: 20px;
 	background: #777777;
 	
-	transition: all 0.2s, border-radius 1s; 
+	transition: color 0.2s, background 0.2s, font_weight 0.2s, border-radius 0.5s; 
 }
 .about-resume:hover {
 	border-radius: 3px;
